--- a/css/main.css
+++ b/css/main.css
@@ -681,7 +681,8 @@ ul.nostyle i {
 }
 #our-standards {
   padding: 100px 0 70px;
-  background: #132125 url(../images/animated-number/bg.jpg) no-repeat 0 0;
+  background: #132125;
+  /*background: #132125 url(../images/animated-number/bg.jpg) no-repeat 0 0; */
   background-size: cover;
   color: #fff;
 }
